<resources>
    <string name="app_name">CarApplication</string>
    <string name="welcome">Welcome!</string>
    <string name="identify_the_car_make">Identify the Car Make</string>
    <string name="hints">Hints</string>
    <string name="advanced_level">Advanced Level</string>
    <string name="identify_the_car_image">Identify the Car Image</string>
    <string name="welcome_to_identify_the_car_make">Welcome to Identify the Car Make</string>
    <string name="car_name_display">Car Make</string>
    <string name="car_image">Car Image</string>
    <string name="car_image_1">Car Image</string>
    <string name="car_image_2">Car Image</string>
    <string name="car_image_3">Car Image</string>
    <string name="welcome_to_advanced_level">Welcome to Advanced Level</string>
    <string name="identify">Identify</string>
    <string name="welcome_to_identify_the_car_image">Welcome to Identify the Car Image</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>

    <string-array name="CarImages">
        <item>Alfa Romeo Mito</item>
        <item>Audi A1</item>
        <item>Bentley</item>
        <item>BMW 3 Series</item>
        <item>Citroen C3</item>
        <item>Citroen C4</item>
        <item>Citroen DS 4S</item>
        <item>Ferrari</item>
        <item>Fiat 500</item>
        <item>Ford Focus</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Kia GT</item>
        <item>Lamborghini</item>
        <item>Land Rover</item>
        <item>Lexus</item>
        <item>Mini Cooper</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Peugeot</item>
        <item>Peugeot e2008</item>
        <item>Range Rover</item>
        <item>Renault</item>
        <item>Seat</item>
        <item>Smart</item>
        <item>Suzuki Swift</item>
        <item>Tesla</item>
        <item>Toyota</item>
        <item>Vauxhall Corsa</item>
        <item>Volkswagon Polo</item>
        <item>Volvo</item>
    </string-array>
    
</resources>